--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
+    "@ionic-native/in-app-browser": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "moodle-client": "0.5.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
