--- a/package.json
+++ b/package.json
@@ -19,14 +19,24 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@capacitor/android": "3.3.1",
     "@capacitor/app": "1.0.6",
     "@capacitor/core": "3.3.0",
+    "@capacitor/filesystem": "^1.0.6",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
+    "@ionic-native/document-viewer": "^5.36.0",
+    "@ionic-native/file": "^5.36.0",
+    "@ionic-native/file-opener": "^5.36.0",
+    "@ionic-native/http": "^5.36.0",
     "@ionic-native/in-app-browser": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-advanced-http": "^3.2.2",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-opener2": "^3.0.5",
     "cordova-plugin-inappbrowser": "^5.0.0",
+    "jetifier": "^2.0.0",
     "moodle-client": "0.5.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
