--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "@ionic-native/file-opener": "^5.36.0",
     "@ionic-native/http": "^5.36.0",
     "@ionic-native/in-app-browser": "^5.36.0",
+    "@ionic-native/zip": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "cordova-plugin-advanced-http": "^3.2.2",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-opener2": "^3.0.5",
     "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-zip": "^3.1.0",
+    "h5p-standalone": "^3.4.0",
     "jetifier": "^2.0.0",
+    "jszip": "^3.7.1",
     "moodle-client": "0.5.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
