--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@capacitor-community/http": "^1.4.1",
     "@capacitor/android": "3.3.1",
     "@capacitor/app": "1.0.6",
     "@capacitor/core": "3.3.0",
@@ -26,24 +27,38 @@
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
+    "@ionic-native/android-permissions": "^5.36.0",
+    "@ionic-native/camera": "^5.36.0",
+    "@ionic-native/diagnostic": "^5.36.0",
     "@ionic-native/document-viewer": "^5.36.0",
     "@ionic-native/file": "^5.36.0",
     "@ionic-native/file-opener": "^5.36.0",
     "@ionic-native/http": "^5.36.0",
     "@ionic-native/in-app-browser": "^5.36.0",
+    "@ionic-native/media-capture": "^5.36.0",
     "@ionic-native/zip": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "cordova-plugin-advanced-http": "^3.2.2",
+    "cordova-plugin-android-permissions": "^1.1.2",
+    "cordova-plugin-camera": "^6.0.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-opener2": "^3.0.5",
     "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-media-capture": "^3.0.3",
     "cordova-plugin-zip": "^3.1.0",
+    "cordova.plugins.diagnostic": "^6.1.0",
+    "crypto-js": "^4.1.1",
     "h5p-standalone": "^3.4.0",
+    "ionic-native-http-connection-backend": "^9.0.1",
     "jetifier": "^2.0.0",
     "jszip": "^3.7.1",
     "moodle-client": "0.5.2",
     "rxjs": "~6.6.0",
+    "stream": "^0.0.2",
+    "timers": "^0.1.1",
     "tslib": "^2.2.0",
+    "x2js": "^3.4.2",
+    "xml2js": "^0.4.23",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
