--- a/package.json
+++ b/package.json
@@ -28,21 +28,29 @@
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
     "@ionic-native/android-permissions": "^5.36.0",
+    "@ionic-native/base64": "^5.36.0",
     "@ionic-native/camera": "^5.36.0",
     "@ionic-native/diagnostic": "^5.36.0",
     "@ionic-native/document-viewer": "^5.36.0",
     "@ionic-native/file": "^5.36.0",
+    "@ionic-native/file-chooser": "^5.36.0",
     "@ionic-native/file-opener": "^5.36.0",
+    "@ionic-native/file-path": "^5.36.0",
+    "@ionic-native/file-transfer": "^5.36.0",
     "@ionic-native/http": "^5.36.0",
     "@ionic-native/in-app-browser": "^5.36.0",
     "@ionic-native/media-capture": "^5.36.0",
     "@ionic-native/zip": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "com-badrit-base64": "^0.2.0",
     "cordova-plugin-advanced-http": "^3.2.2",
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-camera": "^6.0.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-opener2": "^3.0.5",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filechooser": "^1.2.0",
+    "cordova-plugin-filepath": "^1.6.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-media-capture": "^3.0.3",
     "cordova-plugin-zip": "^3.1.0",
