--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@ionic-native/http": "^5.36.0",
     "@ionic-native/in-app-browser": "^5.36.0",
     "@ionic-native/media-capture": "^5.36.0",
+    "@ionic-native/native-storage": "^5.36.0",
     "@ionic-native/zip": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "com-badrit-base64": "^0.2.0",
@@ -53,6 +54,7 @@
     "cordova-plugin-filepath": "^1.6.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-media-capture": "^3.0.3",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-zip": "^3.1.0",
     "cordova.plugins.diagnostic": "^6.1.0",
     "crypto-js": "^4.1.1",
