--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/android-permissions": "^5.36.0",
     "@ionic-native/base64": "^5.36.0",
     "@ionic-native/camera": "^5.36.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic-native/diagnostic": "^5.36.0",
     "@ionic-native/document-viewer": "^5.36.0",
     "@ionic-native/file": "^5.36.0",
